# ucilib

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  design.md  flake.nix  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/ucilib/: engine.hpp  types.hpp  ucilib.hpp
source/: engine.cpp  error.cpp  parser.cpp
source/detail/: parser.hpp
test/: CMakeLists.txt
test/source/: engine_test.cpp  parser_test.cpp
